bin: implement decoding

--- a/internal/gen/_template/header.tmpl
+++ b/internal/gen/_template/header.tmpl
@@ -4,7 +4,9 @@
 package {{ $.Package }}
 
 import (
-    "github.com/ernado/td/internal/bin"
+"fmt"
+
+"github.com/ernado/td/internal/bin"
 )
 
 // No-op definition for keeping imports.
