--- a/internal/gen/_template/simple.tmpl
+++ b/internal/gen/_template/simple.tmpl
@@ -91,14 +91,15 @@ func Decode{{ $f.Name }} (buf *bin.Buffer) ({{ $f.Name }}, error) {
         return nil, err
     }
     switch id {
-    {{ range $c := $f.Constructors }}
+    {{- range $c := $f.Constructors }}
     case 0x{{ $c.HexID }}:
+        // Decoding {{ $c.TLType }}.
         v := {{ $c.Name }}{}
         if err := v.Decode(buf); err != nil {
             return nil, xerrors.Errorf("unable to decode {{ $f.Name }}: %w", err)
         }
         return &v, nil
-    {{ end }}
+    {{- end }}
     default:
         return nil, xerrors.Errorf("unable to decode {{ $f.Name }}: %w", bin.NewUnexpectedID(id))
     }
