--- a/internal/gen/_template/simple.tmpl
+++ b/internal/gen/_template/simple.tmpl
@@ -19,56 +19,77 @@ type {{ $s.Name }} struct {
 const {{ $s.Name }}TypeID = 0x{{ $s.HexID }};
 
 // Encode implements bin.Encoder.
-func ({{ $s.Receiver }} {{ $s.Name }}) Encode({{ $s.BufArg }} *bin.Buffer) {
+func ({{ $s.Receiver }} *{{ $s.Name }}) Encode({{ $s.BufArg }} *bin.Buffer) error {
+    if {{ $s.Receiver }} == nil {
+        return xerrors.Errorf("can't encode {{ $s.TLType }} as nil")
+    }
 {{ $s.BufArg }}.PutID({{ $s.Name }}TypeID)
 {{- range $f := $s.Fields }}
     {{- if $f.Vector }}
     {{ $s.BufArg }}.PutVectorHeader(len({{ $s.Receiver }}.{{ $f.Name }}))
-    for _, v := range {{ $s.Receiver }}.{{ $f.Name }} {
+    for {{ if $f.Generic }}idx{{ else }}_{{ end }}, v := range {{ $s.Receiver }}.{{ $f.Name }} {
     {{- if $f.Encoder }}
-        v.Encode({{ $s.BufArg }})
+        {{- if $f.Generic }}
+            if v == nil {
+            return xerrors.Errorf("unable to encode {{ $s.TLType }}: field {{ $f.TLName }} element with index %d is nil", idx)
+            }
+        {{- end}}
+        if err := v.Encode({{ $s.BufArg }}); err != nil {
+            return xerrors.Errorf("unable to encode {{ $s.TLType }}: field {{ $f.TLName }} element with index %d: %w", idx, err)
+        }
     {{- else }}
         {{ $s.BufArg }}.Put{{ $f.Func }}(v)
     {{- end }}
     }
     {{- else }}
     {{- if $f.Encoder }}
-    {{ $s.Receiver }}.{{ $f.Name }}.Encode({{ $s.BufArg }})
+    {{- if $f.Generic }}
+    if {{ $s.Receiver }}.{{ $f.Name }} == nil {
+        return xerrors.New("unable to encode {{ $s.TLType }}: field {{ $f.TLName }} is nil")
+    }
+    {{- end}}
+    if err := {{ $s.Receiver }}.{{ $f.Name }}.Encode({{ $s.BufArg }}); err != nil {
+        return xerrors.Errorf("unable to encode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+    }
     {{- else }}
     {{ $s.BufArg }}.Put{{ $f.Func }}({{ $s.Receiver }}.{{ $f.Name }})
     {{- end }}
     {{- end}}
 {{- end }}
+    return nil
 }
 
 // Decode implements bin.Decoder.
 func ({{ $s.Receiver }} *{{ $s.Name }}) Decode({{ $s.BufArg }} *bin.Buffer) error {
+    if {{ $s.Receiver }} == nil {
+        return xerrors.Errorf("can't encode {{ $s.TLType }} to nil")
+    }
     if err := {{ $s.BufArg }}.ConsumeID({{ $s.Name }}TypeID); err != nil {
-        return fmt.Errorf("unable to decode {{ $s.TLType }}: %w", err)
+        return xerrors.Errorf("unable to decode {{ $s.TLType }}: %w", err)
     }
 {{- range $f := $s.Fields }}
     {
         {{- if $f.Vector }}
             headerLen, err := {{ $s.BufArg }}.VectorHeader()
             if err != nil {
-                return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
             }
             for idx := 0; idx < headerLen; idx++ {
 
             {{- if $f.Generic }}
                 value, err := Decode{{ $f.Type }}({{ $s.BufArg }})
                 if err != nil {
-                    return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                    return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
                 }
             {{- else if $f.Encoder }}
                 var value {{ $f.Type }}
                 if err := value.Decode({{ $s.BufArg }}); err != nil {
-                    return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                    return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
                 }
             {{- else}}
                 value, err := {{ $s.BufArg }}.{{ $f.Func }}()
                 if err != nil {
-                    return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                    return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
                 }
             {{- end }}
                 {{ $s.Receiver }}.{{ $f.Name }} = append({{ $s.Receiver }}.{{ $f.Name }}, value)
@@ -77,17 +98,17 @@ func ({{ $s.Receiver }} *{{ $s.Name }}) Decode({{ $s.BufArg }} *bin.Buffer) erro
         {{- if $f.Generic }}
             value, err := Decode{{ $f.Type }}({{ $s.BufArg }})
             if err != nil {
-                return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
             }
             {{ $s.Receiver }}.{{ $f.Name }} = value
         {{- else if $f.Encoder }}
             if err := {{ $s.Receiver }}.{{ $f.Name }}.Decode({{ $s.BufArg }}); err != nil {
-                return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
             }
         {{- else }}
             value, err := {{ $s.BufArg }}.{{ $f.Func }}()
             if err != nil {
-                return fmt.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
+                return xerrors.Errorf("unable to decode {{ $s.TLType }}: field {{ $f.TLName }}: %w", err)
             }
             {{ $s.Receiver }}.{{ $f.Name }} = value
         {{- end }}
@@ -104,7 +125,7 @@ func ({{ $s.Receiver }} {{ $s.Name }}) construct() {{ $s.Interface }} { return &
 
 // Ensuring interfaces in compile-time for {{ $s.Name }}.
 var (
-_ bin.Encoder = {{ $s.Name }}{}
+_ bin.Encoder = &{{ $s.Name }}{}
 _ bin.Decoder = &{{ $s.Name }}{}
 {{ if $s.Constructor }}
 _ {{ $s.Interface }} = &{{ $s.Name }}{}
