--- a/gen/_template/header.tmpl
+++ b/gen/_template/header.tmpl
@@ -7,7 +7,7 @@ import (
 "context"
 
 "golang.org/x/xerrors"
-"github.com/ernado/td/internal/bin"
+"github.com/ernado/td/bin"
 )
 
 // No-op definition for keeping imports.
