--- a/gen/_template/header.tmpl
+++ b/gen/_template/header.tmpl
@@ -4,16 +4,15 @@
 package {{ $.Package }}
 
 import (
-{{ if $.RPC }}
 "context"
-{{ else }}
 "fmt"
-{{ end }}
 
 "github.com/ernado/td/bin"
 )
 
 // No-op definition for keeping imports.
 var _ = bin.Buffer{}
+var _ = context.Background()
+var _ = fmt.Stringer(nil)
 
 {{ end }}
